<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Hoy Milonga</string>
	<string name="connection_errors">We are currently experiencing connection issues</string>
	<string name="news_on_events_title">There has been news on some events. Check them out!</string>
	<string name="news_on_events">News on events</string>
	<string name="today_list_events_label">Today\'s Milongas</string>
	<string name="login_confirm_exit_app">Are you sure you want to close the app?</string>
	<string name="answer_no">No</string>
	<string name="answer_yes">Yes</string>
	<string name="update_manually">Refresh</string>
	<string name="events_updated_succ">Events updated!</string>
	<string name="no_events_to_show">No events to show!</string>
	<string name="event_cancelled">CANCELLED</string>
	<string name="event_date_label">Date</string>
	<string name="start_time_label">From</string>
	<string name="end_time_label">to</string>
	<string name="event_genre_label">Genre</string>
	<string name="name_of_place_label">Place</string>
	<string name="event_organizers_label">Organizers</string>
	<string name="event_address_label">Address</string>
	<string name="phone_number_label">Phone</string>
	<string name="email_address_label">E-mail</string>
	<string name="event_details_label">Details</string>
	<string name="event_price_label">Price</string>
	<string name="event_has_classes">Has Class</string>
	<string name="event_special_event">Special Event</string>
	<string name="too_many_update_manually">Try again in a couple of minutes</string>
	<string name="loading_text">Loading&#8230;</string>
	<string name="classes_available">Class</string>
	<string name="special_event">Special event</string>
	<string name="website_label">Website</string>
	<string name="reservation_advised">Reservation Recommended</string>
	<string name="classes_details_label">
		<u>Class Details</u>
	</string>
	<string name="first_class_time_label">First Class Time</string>
	<string name="how_to_get_there_label">How to get</string>
	<string name="you_are_here">You\'re here</string>
	<string name="event_map">Milonga Map</string>
	<string name="google_maps_not_found">You don\'t have Google Maps installed.</string>
	<string name="install">Install</string>
	<string name="today_events_map">Today\'s map</string>
	<string name="cant_sync_new_events">Can\'t get updates in milongas. Check your internet connection</string>
	<string name="sync_local_events">Newest updates</string>
	<string name="invalid_map_data">Sorry, can\'t show the location</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="manually_update_success">Events updated!</string>

</resources>
