<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  style="@style/ComponentStyle">


		<RadioGroup
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:orientation="horizontal">

				<RadioButton
						android:id="@+id/future_events"
						android:layout_weight="1"
						style="@style/LabelTextStyle"
						android:text="@string/list_events_label"/>
				<RadioButton
						android:id="@+id/today_events"
						style="@style/LabelTextStyle"
						android:text="@string/today_list_events_label"/>
		</RadioGroup>




		<RelativeLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">

			<LinearLayout
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_alignParentRight="true">

					<TextView
						style="@style/LabelTextStyle"
						android:layout_marginRight="10dp"
						android:text="@string/special_event"/>

					<TextView
						style="@style/LabelTextStyle"
						android:text="@string/classes_available"/>
			</LinearLayout>


			<ListView
					android:id="@android:id/list"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
		</RelativeLayout>

</LinearLayout>

