<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:orientation="vertical">

	<RelativeLayout style="@style/ItemRowStyle">

		<TextView
				android:id="@+id/event_name"
				style="@style/LabelTextStyle"/>
		<TextView
			android:id="@+id/slash"
			style="@style/LabelTextStyle"
			android:layout_toRightOf="@id/event_name"
			android:layout_marginLeft="10dp"
			android:text="-"/>

		<TextView
				android:id="@+id/event_neighbourhood"
				style="@style/LabelTextStyle"
				android:layout_toRightOf="@id/slash"
				android:layout_marginLeft="10dp"/>
	</RelativeLayout>

	<RelativeLayout style="@style/ItemRowStyle">

		<TextView
				android:id="@+id/event_appointment_date"
				style="@style/LabelTextStyle"
				android:layout_alignParentLeft="true"
				android:paddingRight="10dp"/>

		<TextView
				android:id="@+id/event_begin_time"
				style="@style/LabelTextStyle"
				android:layout_toRightOf="@id/event_appointment_date"/>
		<TextView
			android:id="@+id/event_cancelled"
			style="@style/LabelTextStyle"
			android:layout_toRightOf="@id/event_begin_time"
			android:textColor="#ff0000"
			android:layout_marginLeft="10dp"
			android:visibility="gone"
			android:text="@string/event_cancelled"/>

		<ImageView
			android:id="@+id/event_has_classes"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:background="@drawable/class_icon"
			android:layout_alignParentRight="true"
			android:contentDescription="@string/event_has_classes"/>

		<ImageView
			android:id="@+id/event_special_event"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:background="@drawable/special_event_icon"
			android:layout_toLeftOf="@id/event_has_classes"
			android:layout_marginRight="50dp"
			android:contentDescription="@string/event_special_event"/>



	</RelativeLayout>

</LinearLayout>